Added dropdown for days and started dropdown for time - Marvin

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
   font-family: "font-family:Comic Neue", cursive;
 }
 
+body {
+  margin: 0;
+}
+
 .container {
   display: flex;
   width: 800px;
@@ -38,7 +42,13 @@
 
 .back-ground-div {
   width: 100%;
-  height: 1000px;
+  height: 100%;
   z-index: 1;
   background-color: rgba(0, 0, 0, 0.419);
+  position: absolute;
+  margin: 0;
+}
+
+.hidden {
+  display: none;
 }
